<resources>
    <string name="app_name">Friends Link Up</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="add_job">Add job</string>
    <string name="add_event">Add event</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="server_problems">Something went wrong. Server problems</string>
    <string name="repeat">REPEAT?</string>
    <string name="error_network">error_network</string>
    <string name="error_unknown">error_unknown</string>
    <string name="error_db">error_db</string>
    <string name="news">Recent entries</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_save">Save</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Login</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Log in to the system</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="All_fields">All fields are required to be filled in</string>
    <string name="To_continue">To continue, you need to log in</string>
    <string name="name_user">Name user</string>
    <string name="repeat_password" translatable="false">Repeat password</string>
    <string name="password_not_match">Password does not match</string>
    <string name="post_content">Text %1$s</string>
    <string name="notification_user_published_post">User %1$s published new post:</string>
    <string name="feed_of_posts">Posts</string>
    <string name="feed_of_jobs">Jobs</string>
    <string name="feed_of_events">Events</string>
    <string name="video">Video</string>
    <string name="job_period">Work period</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="name_author">Иван Петров</string>
    <string name="geo">Geo</string>
    <string name="link">Link</string>
    <string name="photo_video">Photo or Video</string>
    <string name="description_add_menu">add menu</string>
    <string name="mention">Mention</string>
    <string name="add">Add</string>
    <string name="speakers">Speakers</string>
    <string name="date">Date</string>
    <string name="name_of_the_organization">Name of the organization</string>
    <string name="position">Position</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="addGeo">Add this geo data?</string>
    <string name="add_avatar">add avatar</string>
    <string name="camera">Open camera</string>
    <string name="image">Add from Gallery</string>
    <string name="delete">Delete</string>
    <string name="not_registered">The user is not registered</string>
    <string name="audio">Audio</string>
    <string name="images">Image</string>
    <string name="first_three">The first three fields are required</string>
    <string name="content">Content</string>
    <string name="content_field">The content field and date is required</string>
    <string name="leave_the_app">Are you sure you want to leave the app?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="problem_loading">Problems downloading data from the server, try another time</string>

    <string name="need_permission">Location permission required</string>
    <string name="which_mention">Which of the users should I mention?</string>
    <string name="list_of_mentioned">List of mentioned users</string>
    <string name="mention_anyone">The user didn t mention anyone</string>
    <string name="you_are_where">You are where you need to be</string>
    <string name="be_lost">All changes will be lost if you exit</string>
    <string name="exit">exit</string>
</resources>